syntax = "proto3";

package calculator;

option go_package = "calculator/calculatorpb;calculatorpb";

message SumRequest {
    int32 first_number = 1;
    int32 second_number = 2;
}

message SumResponse {
    int32 sum_result = 1;
}

message PrimeNumberRequest {
    int32 number = 1;
}

message PrimeNumberResponse {
    int32 result = 1;
}

message AverageRequest {
    int32 number = 1;
}

message AverageResponse {
    double result = 1;
}

message MaximumRequest {
    int32 number = 1;
}

message MaximumResponse {
    int32 maximum = 1;
}

message SquareRootRequest {
    int32 number = 1;
}

message SquareRootResponse {
    double number_root = 1;
}


service CalculatorService {
    rpc Sum(SumRequest) returns (SumResponse) {}; 
    rpc PrimeNumberDecomposition(PrimeNumberRequest) returns (stream PrimeNumberResponse) {};
    rpc ComputeAverage(stream AverageRequest) returns (AverageResponse) {};
    rpc FindMaximum (stream MaximumRequest) returns (stream MaximumResponse) {};

    // error handling 
    // this RPC will throw out an exception if the sent number is negative
    // The error being sent is of type INVALID_ARGUMENT
    rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse) {};
}